--- a/quantrivien/quanlylophoc/index.html
+++ b/quantrivien/quanlylophoc/index.html
@@ -10,16 +10,13 @@
     <div class="col-md-3">
         <input type="text" id="tenLop" class="form-control" style="border-radius: 15px" placeholder="Tên Lớp">
     </div>
-    <div class="col-2 col-md-2">
+    <div class="col-md-auto">
         <button class="btn btn-primary" onclick="renderLop()">Tìm kiếm</button>
     </div>
-
-    <div class="col-2 col col-lg-2">
-        <div class="container">
+    <div class="col-md-auto">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAdd">
                 Thêm
             </button>
-        </div>
     </div>
 </div>
 
