--- a/quantrivien/quanlymonhoc/index.html
+++ b/quantrivien/quanlymonhoc/index.html
@@ -63,7 +63,7 @@
             <tr>
                 <th scope="col">STT</th>
                 <th scope="col">Tên Môn Học</th>
-                <th scope="col">Số Tín Chỉ</th>
+                <th scope="col" style="    width: 150px">Số Tín Chỉ</th>
                 <th scope="col">Học Phí</th>
 
                 <th scope="col"></th>
