--- a/quantrivien/index.html
+++ b/quantrivien/index.html
@@ -22,19 +22,19 @@
     <script src="../js/constants.js"></script>
     <script src="../js/helper.js"></script>
     <script src="../js/common.js"></script>
-    <script src="../js/quantrivien.js"></script>
-    <script src="../js/bangtin.js"></script>
-    <script src="../js/lophoc.js"></script>
-    <script src="../js/khoa.js"></script>
-    <script src="../js/monhoc.js"></script>
-    <script src="../js/taikhoan.js"></script>
-    <script src="../js/thongtinsinhvien.js"></script>
-    <script src="../js/giangvien.js"></script>
-    <script src="../js/kyhoc.js"></script>
-    <script src="../js/chuongtrinhdaotao.js"></script>
-    <script src="../js/thongke.js"></script>
-    <script src="../js/diemrenluyen.js"></script>
-    <script src="../js/lichthi.js"></script>
+    <script src="../js/quantrivien/renderQuantrivien.js"></script>
+    <script src="../js/quantrivien/bangtin.js"></script>
+    <script src="../js/quantrivien/lophoc.js"></script>
+    <script src="../js/quantrivien/khoa.js"></script>
+    <script src="../js/quantrivien/monhoc.js"></script>
+    <script src="../js/quantrivien/taikhoan.js"></script>
+    <script src="../js/quantrivien/thongtinsinhvien.js"></script>
+    <script src="../js/quantrivien/giangvien.js"></script>
+    <script src="../js/quantrivien/kyhoc.js"></script>
+    <script src="../js/quantrivien/chuongtrinhdaotao.js"></script>
+    <script src="../js/quantrivien/thongke.js"></script>
+    <script src="../js/quantrivien/diemrenluyen.js"></script>
+    <script src="../js/quantrivien/lichthi.js"></script>
 
 
     <!-- end js -->
@@ -54,14 +54,17 @@
             <div class="row  align-items-center page-header justify-content-between m-0">
                 <div class="col-md-6 col-6 col-sm-6">
                     <div class=" d-flex  header-logo">
-                        <div class="logo col-md-2 col-2 col-sm-2 text-center">
-                            <a href="index.html">
-                                <img src="../assets/image/logo-small.png" alt="logo" class="img-logo">
-                            </a>
-                        </div>
-                        <div class="menu-toggle col-md-4 col-4 col-sm-4 text-center">
+
+                        <div class="menu-toggle col-md-1 col-1 col-sm-1">
                             <i class="bi bi-list icon-toggle" id="show"></i>
                         </div>
+                        <div class="logo col-md-2 col-2 col-sm-2 text-center">
+                            <a href="index.html">
+                                <img src="../assets/image/logo-small.png" alt="logo" class="img-logo"
+                                    onclick="renderPGBangTin()">
+                            </a>
+                        </div>
+
                     </div>
                 </div>
 
@@ -92,21 +95,22 @@
     </div>
     <div class="container-fluid">
         <div class="row flex-nowrap">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 sidebar" style="background-color: #2B3643;">
-                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 sidebar"
+                style="background-color: #2B3643; width: 80px;">
+                <div class="d-flex flex-column align-items-center align-items-sm-start ps-2 pt-2 text-white min-vh-100">
                     <ul class="navbar-nav nav-pills mt-3" id="menu">
                         <li class="nav-item mt-2">
                             <a class="nav-link align-middle px-0" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLLopHoc()" title="Quản Lý Lớp Học">
                                 <i class="fa-solid fa-list-ul"></i>
-                                <span class="ms-2">Quản Lý Lớp Học </span>
+                                <span class="ms-2" style="display: none;">Quản Lý Lớp Học </span>
                             </a>
                         </li>
                         <li class="nav-item mt-2">
                             <a class="nav-link align-middle px-0" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLMonHoc()" title="Quản Lý Môn Học">
                                 <i class="fa-solid fa-book"></i>
-                                <span class="ms-2">Quản Lý Môn Học </span>
+                                <span class="ms-2" style="display: none;">Quản Lý Môn Học </span>
                             </a>
                         </li>
 
@@ -115,14 +119,14 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLBangTin()" title="Quản Lý Bảng Tin">
                                 <i class="fa-solid fa-chalkboard-user"></i>
-                                <span class="ms-2">Quản Lý Bảng Tin</span>
+                                <span class="ms-2" style="display: none;">Quản Lý Bảng Tin</span>
                             </a>
                         </li>
                         <li class="nav-item mt-2">
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLLichThi()" title="Quản Lý Lịch Thi">
                                 <i class="fa-solid fa-clipboard-list"></i>
-                                <span class="ms-2">Quản Lý Lịch Thi</span>
+                                <span class="ms-2" style="display: none;">Quản Lý Lịch Thi</span>
                             </a>
                         </li>
 
@@ -130,7 +134,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLKhoa()" title="Quản Lý Khoa">
                                 <i class="fa-regular fa-rectangle-list"></i>
-                                <span class="ms-2">Quản Lý Khoa</span>
+                                <span class="ms-2" style="display: none;">Quản Lý Khoa</span>
                             </a>
                         </li>
 
@@ -138,7 +142,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLTaiKhoan()" title="Quản Lý Tài Khoản">
                                 <i class="fa-solid fa-user-group"></i>
-                                <span class="ms-2">Quản Lý Tài Khoản</span>
+                                <span class="ms-2" style="display: none;">Quản Lý Tài Khoản</span>
                             </a>
                         </li>
 
@@ -146,7 +150,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLHocPhi()" title="Quản Lý Học Phí">
                                 <i class="fa-solid fa-money-check-dollar"></i>
-                                <span class="ms-2">Quản Lý Học Phí</span>
+                                <span class="ms-2" style="display: none;">Quản Lý Học Phí</span>
                             </a>
                         </li>
 
@@ -156,7 +160,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderQLSinhVien()" title="Thông Tin Sinh Viên">
                                 <i class="fa-solid fa-folder-minus"></i>
-                                <span class="ms-2">Thông Tin Sinh Viên</span>
+                                <span class="ms-2" style="display: none;">Thông Tin Sinh Viên</span>
                             </a>
                         </li>
 
@@ -164,7 +168,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderThongKeDiem()" title="Thống Kê Điểm">
                                 <i class="fa-solid fa-clipboard-check"></i>
-                                <span class="ms-2">Thống Kê Điểm</span>
+                                <span class="ms-2" style="display: none;">Thống Kê Điểm</span>
                             </a>
                         </li>
 
@@ -172,7 +176,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderThongKeHocBong()" title="Thống Kê Học Bổng">
                                 <i class="fa-solid fa-hand-holding-dollar"></i>
-                                <span class="ms-2">Thống Kê Học Bổng</span>
+                                <span class="ms-2" style="display: none;">Thống Kê Học Bổng</span>
                             </a>
                         </li>
 
@@ -180,7 +184,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderThongKeDiemRenLuyen()" title="Điểm Rèn Luyện">
                                 <i class="fa-solid fa-list-ol"></i>
-                                <span class="ms-2">Điểm Rèn Luyện</span>
+                                <span class="ms-2" style="display: none;">Điểm Rèn Luyện</span>
                             </a>
                         </li>
 
@@ -188,7 +192,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderChuongTrinhDaoTao()" title="Chương Trình Đào Tạo">
                                 <i class="fa-solid fa-book-open"></i>
-                                <span class="ms-2">Chương Trình Đào Tạo</span>
+                                <span class="ms-2" style="display: none;">Chương Trình Đào Tạo</span>
                             </a>
                         </li>
 
@@ -196,7 +200,7 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 onclick="renderSinhVienTrongKTX()" title="Quản Lý Sinh Viên Trong KTX">
                                 <i class="fa-solid fa-graduation-cap"></i>
-                                <span class="ms-2">Danh Sách Sinh Viên Nội
+                                <span class="ms-2" style="display: none;">Danh Sách Sinh Viên Nội
                                     Trú</span>
                             </a>
                         </li>
@@ -205,7 +209,8 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 title="Quản Lý Sinh Viên Trong KTX">
                                 <i class="fa-solid fa-file-lines"></i>
-                                <span class="ms-2 " onclick="renderQuanLyGiangVien()">Quản Lý Giảng Viên</span>
+                                <span class="ms-2" style="display: none;" onclick="renderQuanLyGiangVien()">Quản Lý
+                                    Giảng Viên</span>
                             </a>
                         </li>
 
@@ -213,7 +218,8 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 title="Quản Lý Sinh Viên Trong KTX">
                                 <i class="fa-solid fa-align-left"></i>
-                                <span class="ms-2 " onclick="renderQuanLyDiemRenLuyen()">Quản Lý Điểm Rèn Luyện</span>
+                                <span class="ms-2" style="display: none;" onclick="renderQuanLyDiemRenLuyen()">Quản Lý
+                                    Điểm Rèn Luyện</span>
                             </a>
                         </li>
 
@@ -221,57 +227,18 @@
                             <a class="nav-link px-0 align-middle" data-bs-toggle="tooltip" data-bs-placement="right"
                                 title="Quản Lý Sinh Viên Trong KTX">
                                 <i class="fa-solid fa-calendar-days"></i>
-                                <span class="ms-2 " onclick="renderQuanLyKyHoc()">Quản Lý Kỳ Học</span>
+                                <span class="ms-2" style="display: none;" onclick="renderQuanLyKyHoc()">Quản Lý Kỳ
+                                    Học</span>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col py-3">
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <form class="needs-validation" novalidate>
-                                <h3 class="text-center mt-4">Đổi mật khẩu</h3>
-                                <div class="modal-body">
-                                    <div class="form-group">
-                                        <label for="email1" class="mb-2">Mật khẩu cũ</label>
-                                        <input maxlength="32" type="password" required class="form-control" value=""
-                                            id="matKhauCu">
-                                        <div class="invalid-feedback">
-                                            Mật khẩu cũ không được để trống
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="mb-2 mt-2">Mật khẩu mới</label>
-                                        <input maxlength="32" type="password" required class="form-control" value=""
-                                            id="matKhauMoi">
-                                        <div class="invalid-feedback">
-                                            Mật khẩu mới không được để trống
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="mb-2 mt-2">Nhập lại mật khẩu mới</label>
-                                        <input maxlength="32" type="password" required class="form-control" value=""
-                                            id="xacThucMatKhauMoi">
-                                        <div class="invalid-feedback">
-                                            Nhập lại mật khẩu mới không được để trống
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </form>
-                            <div class="modal-footer border-top-0 d-flex justify-content-center">
-                                <button id="submit" type="submit" class="btn btn-primary" onclick=doiMatKhau()>Cập
-                                    nhật</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div id="dmk"></div>
                 <div class="main container">
                     <script>
-                        renderQLBangTin()
+                        renderPGBangTin()
                     </script>
                 </div>
             </div>
@@ -296,6 +263,7 @@
     document.getElementById("name").innerHTML = name;
 </script>
 <script>
+    $("#dmk").load("../doimatkhau.html");
     // Example starter JavaScript for disabling form submissions if there are invalid fields
     (function () {
         'use strict'
