--- a/quantrivien/quanlykyhoc/index.html
+++ b/quantrivien/quanlykyhoc/index.html
@@ -1,5 +1,5 @@
 <div class="row text-center py-3">
-    <h3>Danh sách kỳ học</h3>
+    <h3>Danh Sách Kỳ Học</h3>
 </div>
 <div class="row py-3">
 
@@ -22,7 +22,7 @@
                         <form class="row g-3 needs-validation" id="formAdd" novalidate>
 
                             <div class="col-md-12">
-                                <label for="tenKyHoc" class="form-label">Tên Kỳ Học *</label>
+                                <label for="tenKyHoc" class="form-label">Tên kỳ học*</label>
                                 <input type="text" class="form-control" id="tenKyHoc" required>
                                 <div class="invalid-feedback">
                                     Tên kỳ học không được để trống
@@ -59,7 +59,7 @@
     <div class="modal-dialog modal-dialog-centered" style="max-width: 500px !important">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Sửa Kỳ</h4>
+                <h4 class="modal-title">Sửa Kỳ Học</h4>
                 <button type="button" class="btn-close" id="close" data-bs-dismiss="modal"></button>
             </div>
             <!-- Modal body -->
@@ -69,7 +69,7 @@
                     <input hidden id="maKy" readonly type="text" class="form-control">
 
                     <div class="col-md-12">
-                        <label for="tenKyHoc" class="form-label">Tên kỳ học *</label>
+                        <label for="tenKyHoc" class="form-label">Tên kỳ học*</label>
                         <input type="text" class="form-control" id="tenKyHoc" required>
                         <div class="invalid-feedback">
                             Tên kỳ học không được để trống
@@ -178,7 +178,6 @@
                                 }
                             }
                         }
-
                     }, false)
                 })
         })()
