--- a/quantrivien/quanlytaikhoan/index.html
+++ b/quantrivien/quanlytaikhoan/index.html
@@ -195,9 +195,9 @@
                             let tenDangNhap = form.tenDangNhap.value.trim()
                             var format = /[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]+/;
                             if (form.tenDangNhap.value.length > 16) {
-                                alert('tên đăng nhập không quá 16 ký tự')
+                                alert('Tên đăng nhập không quá 16 ký tự')
                             } else if (form.matKhau.value.length > 32) {
-                                alert('mật khẩu không quá 32 ký tự')
+                                alert('Mật khẩu không quá 32 ký tự')
                             }
                             else if (format.test(tenDangNhap)) {
                                 alert('Không nhập các ký tự đặc biệt như $, %,^ ,&, ,..')
@@ -249,7 +249,7 @@
                                     document.querySelectorAll(".btn-close")[1].click()
                                 })
                                 .catch(err => console.log("Error: ", err))
-                        } else if (form.id == "formBlock") {
+                        } else if (form.id == "f") {
                             fetch(`${HOST}/api/taikhoan/${form.idtk.value}`, {
                                 method: "DELETE",
                                 headers: {
@@ -265,8 +265,6 @@
                                 .catch(err => console.log("Error: ", err))
                         }
                     }
-
-
                 }, false)
             })
     })()
