--- a/quantrivien/thongkediemrenluyen/index.html
+++ b/quantrivien/thongkediemrenluyen/index.html
@@ -10,7 +10,7 @@
         <select id="khoa" class="form-select" style="border-radius: 15px">
         </select>
     </div>
-    <div class="col-md-3 ms-5 ps-5">
+    <div class="col-md-auto">
         <button class="btn btn-primary" onclick="renderSVDRL()">Thống kê</button>
     </div>
 </div>
@@ -22,8 +22,8 @@
                 <th scope="col">MSV</th>
                 <th scope="col">Họ và tên</th>
                 <th scope="col">Khoa</th>
-                <th scope="col">Học kỳ</th>
-                <th scope="col">Điểm Rèn Luyện</th>
+                <th scope="col">Kỳ học</th>
+                <th scope="col">Điểm rèn luyện</th>
             </tr>
         </thead>
         <tbody id="ListDiemRenLuyen">
